--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <h1>
         Welcome to {{ title }}!
     </h1>
+    <input type="text" [(ngModel)]="title">
     <nav>
         <a routerLink="/home" class="navbar">home</a>
         <a routerLink="/about" class="navbar">about</a>
